Sanstitre-2.css
@charset "UTF-8";
/* CSS Document *//*index.html*/



.section{
  
}


.italique{
	font-style: italic;
}


body{
   
	
}
.titre{
    font-weight: bolder;
    font-size: 75px;
    font-stretch: ultra-condensed;
    letter-spacing: -6px;
    white-space: nowrap;
   color: black;
    font-family: "Nimbus Sans L", "Nimbus Sans L Bold", "Nimbus Sans L Bold Italic", "Nimbus Sans L Regular Italic";
    padding-right: -100px;
    position: relative;
    background: linear-gradient(42deg, rgb(6, 6, 6), rgb(231, 247, 4), rgb(37, 40, 20));
    background-repeat: repeat;
    background-size: 90%;
    animation: animate 5s linear 1;
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(252, 252, 249, 0);
	}

@keyframes animate {
  0% {
    background-position: -200%;
  }
  100% {
    background-position: 1500%;
  }
}




p2 {
	font-family: Banco;
	letter-spacing: 8px;
		background: -webkit-gradient(linear, left top, right bottom, from(rgb(230, 176, 176)), to(#CD0000));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}








.structurepagevideo{
	width: 100%;
	height: 100%;

		}


.ventbledigital{
	width: 100%;
	height: 100%;
	right: 0;
	bottom: 0;
	top:0;
	right:0;
	position: absolute;
	background-size: 100% 100%;
	background-color: black;
	object-fit: cover;
	background-size: contain;
}


.intro{
    font-weight: bolder;
    font-family: "Nimbus Sans L", "Nimbus Sans L Bold", "Nimbus Sans L Bold Italic", "Nimbus Sans L Regular Italic";
    text-align: center;
    white-space: normal;
	position: relative;
	
    width: 80%;
    height: 380px;
    z-index: 1;
    overflow-y: scroll;
    font-variant: normal;
    font-size: 52px;
    text-indent: 65px;
    letter-spacing: 4px;
    text-shadow: 1px 1px 8px #FB26F6;
    line-height: 62px;
    color: #000000;
    top: 50px;
    left: 150px;
    bottom: 10px;
    padding-top: 300px;
    padding-bottom: 50px;
}




a {
    color: #000000;
    text-decoration: underline;		
}


a:link {
	color: #000000;
	text-decoration: underline;
}

a:visited {
	color: #000000;
	text-decoration: none;
}

a:focus {
	color:#FBE806; 
	text-decoration: none;
}

a:hover {
	color:#04FBEE; 
	text-decoration: underline;
}

a:active {
    text-decoration: none;
}




.structurepagetriade{
	width: auto;
	height: auto;
	position: relative;

}



.triade{
	padding-left: 100px;
	width:auto;
	height: 800px;
	display: grid; 
	grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
	grid-template-rows: 25% 25% 25% 25%;
	grid-template-areas: "div div div div div div div div div div"
		"div div div div div div div div div div"
		"div div div div div div div div div div"
		"div div div div div div div div div div";
		background-image: url("img/Fond-triade.jpg");
	background-size: 100% 150%;
}


p1{
    font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
    font-size: 56px;
    font-style: normal;
    font-weight: bolder;
    word-spacing: 4px;
}

.rose{
	grid-column-start: 4; 
	grid-column-end: 5;
    grid-row-start: 1; 
	grid-row-end: 1;
	z-index: 1;
	display: inline-grid;
}

.eau{
	grid-column-start: 8; 
	grid-column-end: 9;
    grid-row-start: 3; 
	grid-row-end: 3;
	z-index: 1;
    display: inline-grid;
}

.tranche{
	grid-column-start: 1; 
	grid-column-end: 2; 
    grid-row-start: 4; 
	grid-row-end: 4;
	z-index: 1;
    display: inline-grid;
	
}
	


.rotation1{
	transform: rotate(130deg)
}
.rotation2{
	transform: rotate(170deg);
}
.rotation3{
	transform: rotate(30deg);
}

.flecheTR{
	grid-column-start: 1; 
  	grid-column-end: 4; 
  	grid-row-start: 3; 
  	grid-row-end: 2;
	z-index: 0;	
}

.flecheTE{
	grid-column-start: 4; 
  	grid-column-end: 9; 
  	grid-row-start: 3; 
  	grid-row-end: 3;
	z-index: 0;
}


.flecheRE{
	grid-column-start: 6; 
  	grid-column-end: 10; 
  	grid-row-start: 1; 
  	grid-row-end: 3;
	z-index: 0;
}


.bas{
    font-family: Banco;
    letter-spacing: 15px;
    font-size: 65px;
    background: -webkit-gradient(linear, left top, right bottom, from(rgb(238, 186, 186)), to(#CD0000));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    text-align: center;	
	bottom: 300px;
	text-transform: uppercase;
}




/* GLITCH EFFECT
***********************/
.glitch {
	-webkit-animation: glitch1 2.5s infinite;
	animation: glitch1 2.5s infinite;
}
span.glitch { -webkit-animation: glitch2 1.25s infinite; animation: glitch2 1.25s infinite; }
@-webkit-keyframes glitch1 {
  0% { -webkit-transform: none; transform: none; opacity: 1; }
  7% { -webkit-transform: skew(-0.5deg, -0.9deg); transform: skew(-0.5deg, -0.9deg); opacity: 0.75; }
  10% {  -webkit-transform: none; transform: none; opacity: 1; }
  27% { -webkit-transform: none; transform: none; opacity: 1; }
  30% { -webkit-transform: skew(0.8deg, -0.1deg); transform: skew(0.8deg, -0.1deg); opacity: 0.75; }
  35% { -webkit-transform: none; transform: none; opacity: 1; }
  52% { -webkit-transform: none; transform: none; opacity: 1; }
  55% { -webkit-transform: skew(-1deg, 0.2deg); transform: skew(-1deg, 0.2deg); opacity: 0.75; }
  50% { -webkit-transform: none; transform: none; opacity: 1; }
  72% { -webkit-transform: none; transform: none; opacity: 1; }
  75% { -webkit-transform: skew(0.4deg, 1deg); transform: skew(0.4deg, 1deg); opacity: 0.75; }
  80% { -webkit-transform: none; transform: none; opacity: 1; }
  100% { -webkit-transform: none; transform: none; opacity: 1; }
}
@keyframes glitch1 {
  0% { -webkit-transform: none; transform: none; opacity: 1; }
  7% { -webkit-transform: skew(-0.5deg, -0.9deg); transform: skew(-0.5deg, -0.9deg); opacity: 0.75; }
  10% { -webkit-transform: none; transform: none; opacity: 1; }
  27% { -webkit-transform: none; transform: none; opacity: 1; }
  30% { -webkit-transform: skew(0.8deg, -0.1deg); transform: skew(0.8deg, -0.1deg); opacity: 0.75; }
  35% { -webkit-transform: none; transform: none; opacity: 1; }
  52% { -webkit-transform: none; transform: none; opacity: 1; }
  55% { -webkit-transform: skew(-1deg, 0.2deg); transform: skew(-1deg, 0.2deg); opacity: 0.75; }
  50% { -webkit-transform: none; transform: none; opacity: 1; }
  72% { -webkit-transform: none; transform: none; opacity: 1; }
  75% { -webkit-transform: skew(0.4deg, 1deg); transform: skew(0.4deg, 1deg); opacity: 0.75; }
  80% { -webkit-transform: none; transform: none; opacity: 1; }
  100% { -webkit-transform: none; transform: none; opacity: 1; }
}
@-webkit-keyframes glitch2 {
  0% { -webkit-transform: none; transform: none; opacity: 1; }
  7% { -webkit-transform: skew(-0.7deg, -5deg); transform: skew(-0.7deg, -5deg); opacity: 0.75; }
  10% {  -webkit-transform: none; transform: none; opacity: 1; }
  27% { -webkit-transform: none; transform: none; opacity: 1; }
  30% { -webkit-transform: skew(0.6deg, -0.2deg); transform: skew(0.6deg, -0.2deg); opacity: 0.5; }
  35% { -webkit-transform: none; transform: none; opacity: 1; }
  52% { -webkit-transform: none; transform: none; opacity: 1; }
  55% { -webkit-transform: skew(-45deg, 5deg); transform: skew(-45deg, 5deg); opacity: 0.75; }
  50% { -webkit-transform: none; transform: none; opacity: 1; }
  72% { -webkit-transform: none; transform: none; opacity: 1; }
  75% { -webkit-transform: skew(0.5deg, 12deg); transform: skew(0.5deg, 12deg); opacity: 0.25; }
  80% { -webkit-transform: none; transform: none; opacity: 1; }
  100% { -webkit-transform: none; transform: none; opacity: 1; }
}
@keyframes glitch2 {
  0% { -webkit-transform: none; transform: none; opacity: 1; }
  7% { -webkit-transform: skew(-0.7deg, -5deg); transform: skew(-0.7deg, -5deg); opacity: 0.75; }
  10% {  -webkit-transform: none; transform: none; opacity: 1; }
  27% { -webkit-transform: none; transform: none; opacity: 1; }
  30% { -webkit-transform: skew(0.6deg, -0.2deg); transform: skew(0.6deg, -0.2deg); opacity: 0.5; }
  35% { -webkit-transform: none; transform: none; opacity: 1; }
  52% { -webkit-transform: none; transform: none; opacity: 1; }
  55% { -webkit-transform: skew(-15deg, 0.5deg); transform: skew(-15deg, 0.5deg); opacity: 0.75; }
  50% { -webkit-transform: none; transform: none; opacity: 1; }
  72% { -webkit-transform: none; transform: none; opacity: 1; }
  75% { -webkit-transform: skew(0.5deg, 12deg); transform: skew(0.5deg, 12deg); opacity: 0.25; }
  80% { -webkit-transform: none; transform: none; opacity: 1; }
  100% { -webkit-transform: none; transform: none; opacity: 1; }
}

